Fix avatar example

--- a/examples/avatar/index.html
+++ b/examples/avatar/index.html
@@ -13,7 +13,7 @@
       <div id="users"></div>
     </div>
     
-    <script src="../../dist/uniqolor.js"></script>
+    <script src="https://unpkg.com/uniqolor/dist/uniqolor.js"></script>
     <script src="script.js"></script>
   </body>
 </html>
