--- a/examples/avatar-placeholder/index.html
+++ b/examples/avatar-placeholder/index.html
@@ -2,7 +2,8 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Avatar • uniqolor example</title>
+    <title>Avatar Placeholder • uniqolor example</title>
+    <link rel="icon" href="../favicon.ico"> 
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
